# rbl

./: .gitignore  README.md
rbl_controller_core/: package.xml
ros_packages/: CMakeLists.txt  Utils  planner  uav_simulator
ros_packages/ciri/: CMakeLists.txt  package.xml
ros_packages/ciri/src/: ciri.cpp
ros_packages/filter_reflective_uavs/: CMakeLists.txt  package.xml
ros_packages/filter_reflective_uavs/config/: filter_reflective_uavs.yaml
ros_packages/filter_reflective_uavs/include/filter_reflective_uavs/: filter_reflective_uavs.h
ros_packages/filter_reflective_uavs/src/: filter_reflective_uavs.cpp
ros_packages/map_generator/launch/: map_generator.launch
ros_packages/map_generator/src/: random_forest_sensing.cpp
ros_packages/nodelet/: CMakeLists.txt  package.xml
ros_packages/nodelet/config/: default.yaml
ros_packages/nodelet/launch/: rbl_controller.launch.py
ros_packages/nodelet/msg/: PoseVelocityArray.msg
ros_packages/nodelet/src/: nodelet.cpp
ros_packages/rbl_controller/: CMakeLists.txt  package.xml
ros_packages/rbl_controller/config/: default.yaml
ros_packages/rbl_controller/include/: ciri.h  rbl_controller.h  rbl_replanner.h
ros_packages/rbl_controller/launch/: controller.launch
ros_packages/rbl_controller/script/: lora_publisher.py  monitor_goal.py
ros_packages/rbl_controller/src/: ciri.cpp  nodelet.cpp  rbl_controller.cpp  rbl_replanner.cpp
ros_packages/rbl_controller_core/: CMakeLists.txt  package.xml
ros_packages/rbl_controller_core/include/rbl_controller_core/: rbl_controller.h
ros_packages/rbl_controller_core/src/: rbl_controller.cpp  rbl_controllerNO.cpp
ros_packages/rbl_rc/rbl_rc/: CMakeLists.txt  README.md  package.xml  setup.py
ros_packages/rbl_rc/rbl_rc/rbl_rc/: rc.py
ros_packages/rbl_replanner/: CMakeLists.txt  package.xml
ros_packages/rbl_replanner/include/rbl_replanner/: replanner.h
ros_packages/rbl_replanner/src/: replanner.cpp
ros_packages/replanner/: CMakeLists.txt  package.xml
scripts/: circle_uavs.py  llora.py  llora37.py  lora.py  lora37.py  lora_sender_receiver.py  sender-receiver-publisher.py  sender-receiver-publisher_randomized.py
tmux/Deployment_old/old_16/: data.py  record_rbl.sh
tmux/Simulation_1_uav_octomap/: session.yml
tmux/Simulation_1_uav_octomap/config/: rbl_controller.yaml
tmux/circle10/: 0.pcd  bag2data_old.py  data.py  export_all.sh  export_odom.sh  extractdata.py  record_rbl.sh  rviz.rviz  session.yml  sim.md  simulations.md  start.sh
tmux/circle10/config/: custom_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/circle5/: 0.pcd  bag2data1.py  record_rbl.sh  run_all.sh  rviz.rviz  session.yml  session2.yml
tmux/circle5/config/: custom_config.yaml  hw_api.yaml  rbl_controller.yaml  simulator.yaml
tmux/forest1/: 0.pcd  bag2data1.py  extractdata.py  pc.py  rviz.rviz  session.yml  traversability_multi.py
tmux/forest1/config/: custom_config.yaml  filter_reflective_uavs.yaml  mapplan_config.yaml  network_config.yaml  params  rbl_controller.yaml  simulator.yaml  tf_connector.yaml
tmux/forest1/config1/: rbl_controller.yaml
tmux/forest1/config_old/: custom_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/forest1/super_dense_ros2/: metadata.yaml
tmux/forest5/: bag2data1.py  extractdata.py  generate_summary.sh  rviz.rviz  savepcd.sh  session.yml  traversability.py
tmux/forest5/config/: custom_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/forest5/config1/: custom_config.yaml  simulator.yaml
tmux/irbl/: activation.sh  rviz.rviz  tmux.sh
tmux/irbl/config/: custom_config.yaml  custom_config_garmin.yaml  generic_config.yaml  irbl_config.yaml  livox_tf.sh  livox_tf1.sh  losos_config.yaml  mid360.yaml  world_origin_tf.sh
tmux/irbl_gps/: activation.sh  tmux.sh  zenoh.sh
tmux/irbl_gps/config/: custom_config.yaml  custom_config.yaml.bak  world_origin_tf1.sh
tmux/just-pointlio-losos-irbl/: activation.sh  tmux.sh
tmux/just-pointlio-losos-irbl/config/: custom_config.yaml  custom_configOK.yaml  irbl_config.yaml  octomap_server.yaml  point_lio.yaml
tmux/map_ego_planner/: controller.launch  data.txt  data_2drbl_map.py  data_ego.py  data_ego_map.py  data_rbl.py  data_rbl_map.py  ego_export.sh  ego_planner.launch  ego_planner.rviz  export_all.sh  map.py  map_ego.txt  map_rbl.txt  rbl_export.sh  record.sh  record_2drbl.sh  record_ego.sh  record_ego_odom.sh  record_map.sh  record_rbl.sh  record_rbl_odom.sh  rviz_config.rviz  session.yml  sim_data.txt  table_compilation.sh
tmux/map_ego_planner/config/: custom_config.yaml  hw_api.yaml  rbl_controller.yaml  rbl_controller2d.yaml  simulator.yaml  tf_connector.yaml
tmux/mrs_10_drones_circle/: rviz.rviz
tmux/mrs_10_drones_circle/config/: custom_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/mrs_16/: data.py  plot.py__  run_all.sh  rviz.rviz  session.yml  start.sh  traj.pgf
tmux/mrs_16/config/: custom_config.yaml  network_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/mrs_16/old/: generate_summary.sh
tmux/mrs_16/sim1/: compute.sh  metric
tmux/mrs_16/sim2/: metric
tmux/mrs_16/sim3/: metric
tmux/mrs_9/: data.py  generate_summary.sh  run_all.sh  rviz.rviz  session.yml
tmux/mrs_9/SIM_2oooo/: export.sh
tmux/mrs_9/config/: network_config.yaml  rbl_controller.yaml  simulator.yaml
tmux/mrs_9/old/: record_rbl.sh
tmux/mrs_9/sim1/: compute.sh  metric
tmux/mrs_9/sim2/: compute.sh  metric
tmux/mrs_9/sim3/: compute.sh  metric
tmux/mrs_9_circle/: session.yml
tmux/mrs_9_circle/config/: custom_config.yaml
tmux/mrs_simulator/circle10/: rviz.rviz  session.yml
tmux/mrs_simulator/circle2/: rviz.rviz  session.yml
tmux/mrs_simulator/circle9/: rviz.rviz  session.yml
tmux/mrs_simulator/rbl_circle_10/: rviz.rviz
tmux/mrs_ten_drones_nmpc/: rviz.rviz  session.yml
tmux/mrs_ten_drones_nmpc/config/: hw_api.yaml  (+4 more)
tmux/rbl_circle_10/: rviz.rviz  session.yml
tmux/real_2_uav/: .start.sh.swp  rviz_config1.rviz  session.yml
tmux/sim_1_uav/: rviz.rviz  rviz_config.rviz  session.yml  takeoff.sh
tmux/sim_2_uav/: rviz.rviz  rviz_config1.rviz  session.yml  takeoff.sh  tf_connector.py
(+29 files in other folders)
