<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>filter_reflective_uavs</name>
  <version>0.0.0</version>
  <description>Reflective UAV point cloud filtering and tracking library.</description>
  <maintainer email="kamlem2002@gmail.com">Michal Kamler</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
