<?xml version="1.0"?>
<package format="2">
  <name>rbl_controller</name>
  <version>1.0.0</version>
  <description>Package implementing distributed control for multi-robot collision avoidance.</description>

  <maintainer email="manuel.boldrer@gmail.com">Manuel Boldrer</maintainer>
  <maintainer email="ahmadafz@fel.cvut.cz">Afzal Ahmad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>message_runtime</depend>
  <build_depend>message_generation</build_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
